2010-06-22  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-30
        * Minor bug fix.
        * Complete switch to new binning tool.

2010-05-26  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-29
        * More event number plots for hardware errors.
        * More code tidying.

2010-05-21  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-28
        * A couple of bug fixes.
        * Add more event number plots for hardware errors.
        * Tidy up some of the code.

2010-05-12  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-27
        * Update requirements.

2010-05-11  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-26
        * Fix typo in PPrMon.cxx

2010-05-10  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-25
        * Shrink eta bins to same size.

2010-05-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-24
        * Revise ADC maximum slice plots again.

2010-04-30  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-23
        * Better eta/phi plots.

2010-04-13  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-22
        * Add tool to give threshold names for bin labels.

2010-03-25  Sky French <sfrench@hep.phy.cam.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-21
	* Fixed compilation warnings and pedestal plots

2010-03-23  Sky French <sfrench@hep.phy.cam.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-20
	* Added pedestal monitoring plots
	* Changed LUT EventMismatch Summary plot x-axis labels

2010-03-15  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-19
        * Fix unchecked StatusCodes.

2010-03-12  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-18
        * Simplify PPrMon::recTime()
